--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/lock favicon.png">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
